--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="KFC Onboarding Adventure - Employee onboarding platform" />
-    <meta name="theme-color" content="#FE0000" />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
-    <title>KFC Onboarding Adventure</title>
+    <title>coop-onboarding-adventure</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
+
+    <meta property="og:title" content="coop-onboarding-adventure" />
+    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
